--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -318,8 +318,7 @@ PS1='\[\e[1;32m\]\u@\h\[\e[m\]:\[\e[1;34m\][\W]\[\e[m\]$ '
      alias listdns='scutil --dns | grep nameserver'
      alias bat='ioreg -l | grep Capacity'        
      get_all_local_ip_for_osx
-     ## using grc  (generic color utility for console)
-     #source "`brew --prefix`/etc/grc.bashrc"
+     ## using grc  (generic color utility for console)     
      set_docker_alias
      wifiNetworkname=`/System/Library/PrivateFrameworks/Apple80211.framework/Versions/Current/Resources/airport -I | grep ' SSID'`
      cpustring=`sysctl -n machdep.cpu.brand_string`
@@ -406,6 +405,8 @@ PS1='\[\e[1;32m\]\u@\h\[\e[m\]:\[\e[1;34m\][\W]\[\e[m\]$ '
      python -m SimpleHTTPServer ${1:-16000} 
    }
 
+   ## generates a pdf copy of the the man page and loads 
+   #  it in a preview app.
    xman() {
      #man -t "${1}" | open -f -a /Applications/Preview.app
      man -t $@ | open -f -a /Applications/Preview.app
