--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -91,6 +91,7 @@ PS1='\[\e[1;32m\]\u@\h\[\e[m\]:\[\e[1;34m\][\W]\[\e[m\]$ '
         dbg_print $@        
       fi
    }
+   #check if param is empty
    is_param_empty() {
       if [[ "$@" ]]
       then
