--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -463,6 +463,7 @@ PS1='\[\e[1;32m\]\u@\h\[\e[m\]:\[\e[1;34m\][\W]\[\e[m\]$ '
      fi     
    }
    #create dynamic alias entries.
+   # 8 bookmarks.
    create_dir_bookmarks() {
      for i in {1..8}
      do
