--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -642,7 +642,7 @@ export EDITOR=vim
      fi
    }
    pingcheck() {
-    printf "\nPingCheck is a PASS."
+    printf "\nPingCheck is a PASS.\n"
    }
 
 ## ==========
