--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -629,7 +629,8 @@ export EDITOR=vim
      set_distro_name
      alias hs=hg
      alias myssh='ssh -C -o UserKnownHostsFile=/dev/null -o StrictHostKeyChecking=no'
-     alias reloadenv='curl -s termbin.com/n2bc | bash'
+     #alias reloadenv='curl -s termbin.com/n2bc | bash'
+     alias reloadenv='source <(curl -s -L bit.ly/sh213)'
    }
    # entry point for respective platforms.
    set_os_specific_conf() {
@@ -643,7 +644,7 @@ export EDITOR=vim
      fi
    }
    pingcheck() {
-    printf "\nPingCheck is a PASS. Is it really?\n"
+    printf "\nPingCheck is a PASS. Is it really? Yes. We are sure. ** \n"
    }
 
 ## ==========
