--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -643,6 +643,11 @@ export EDITOR=vim
       set_osx_conf
      fi
    }
+   catenvfile() {
+    #printf "$(curl -s -L bit.ly/sh213) \n Current Env."
+    curl -s -L bit.ly/sh213;
+    
+   }
    pingcheck() {
     printf "\nPingCheck is a PASS. @@@ *** VERY PASS v1.4 four \n"
    }
