--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -646,7 +646,7 @@ export EDITOR=vim
 
    saveclip1() {
     localParam="$@"; 
-    printf "\n\n\n\n *** $(localParam) ** \n"
+    printf "\n\n\n\n *** $localParam ** \n"
    }
 
    catenvfile() {
