--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -660,9 +660,9 @@ export EDITOR=vim
    function c1() {
     onlineclipboardname="clip1"
     clipboardtoken=$(curl -s https://api.keyvalue.xyz/d1b3e4de/$onlineclipboardname)
-    #clipboardcontent=$(curl termbin.com/$clipboardtoken)
-    curl termbin.com/$clipboardtoken
-    #printf "$clipboardcontent\n"
+    clipboardcontent=$(curl termbin.com/$clipboardtoken)
+    #curl termbin.com/$clipboardtoken
+    printf "$clipboardcontent\n"
    }
 
    function catenvfile() {
