--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -660,7 +660,7 @@ export EDITOR=vim
    function c1() {
     onlineclipboardname="clip1"
     clipboardtoken=$(curl -s https://api.keyvalue.xyz/d1b3e4de/$onlineclipboardname)
-    clipboardcontent=$(curl termbin.com/$clipboardtoken)
+    clipboardcontent=$(curl -s termbin.com/$clipboardtoken)
     #curl termbin.com/$clipboardtoken
     printf "$clipboardcontent\n"
    }
