--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -729,8 +729,10 @@ export EDITOR=vim
        #aliasstr="alias '$save=save_to_clip $clipboardname ${bucketArray[3-$itr]}'"
        aliasstr="alias '$save=save_to_clip $clipboardname ${bucketArray[0]}'"
        dbg_print $aliasstr
-       alias $save="save_to_clip $clipboardname ${bucketArray[3-$itr]}"
-       alias $go="print_clip $clipboardname ${bucketArray[3-$itr]}"
+       #alias $save="save_to_clip $clipboardname ${bucketArray[3-$itr]}"
+       #alias $go="print_clip $clipboardname ${bucketArray[3-$itr]}"
+       alias $save="save_to_clip $clipboardname ${bucketArray[0]}"
+       alias $go="print_clip $clipboardname ${bucketArray[0]}"
      done     
    }
 
