--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -768,6 +768,31 @@ export EDITOR=vim
     alias dboxcli=' $HOME/$dbox_uploader_script_linkname -f $HOME/$dbox_token_filename -s -p -k -h'
    }
 
+   function ffsend_stash_the_file() {
+     inputfile=$1
+     if file_present $inputfile
+      then
+         cmdoutput=`ffsend upload $inputfile --copy -f --downloads 1 -y -P`
+         uploaded_fileurl = "echo $cmdoutput | awk '{print $3}'"
+         uploaded_file_passphrase = "echo $cmdoutput | cut -d ' ' -f 5-50"
+
+         #openssl enc -d -aes-256-cbc -a -salt -in $inputfile -out plain.$filefrontname
+         #retval=$?
+         #if [ $retval -eq 0 ];
+         # then
+         #    echo "plain.$filefrontname created."
+         # else
+         #    echo ""
+         #fi
+      else
+         echo "Missing input file name. Or file not found."
+     fi
+
+     printf "$uploaded_fileurl\n"
+     printf "$uploaded_file_passphrase\n"
+
+   }
+
 
 
 ## ==========
