--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -773,7 +773,7 @@ export EDITOR=vim
      if file_present $inputfile
       then
          cmdoutput=`ffsend upload $inputfile --copy -f --downloads 1 -y -P`         
-         uploaded_fileurl=$(printf $cmdoutput | awk '{print $3}')
+         uploaded_fileurl=$(echo $cmdoutput | awk '{print $3}')
          uploaded_file_passphrase=$(echo $cmdoutput | cut -d ' ' -f 5-50)
 
          #openssl enc -d -aes-256-cbc -a -salt -in $inputfile -out plain.$filefrontname
