--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -790,14 +790,16 @@ export EDITOR=vim
          #    echo ""
          #fi
 
-         curl -d '$uploaded_fileurl' $keyvalue_wwwservice/$keyvalue_bucket_id/$keyvalue_urlholder_key
-         curl -d '$uploaded_file_passphrase' $keyvalue_wwwservice/$keyvalue_bucket_id/$keyvalue_phraseholder_key
+         curl -d $uploaded_fileurl $keyvalue_wwwservice/$keyvalue_bucket_id/$keyvalue_urlholder_key
+         curl -d $uploaded_file_passphrase $keyvalue_wwwservice/$keyvalue_bucket_id/$keyvalue_phraseholder_key
       else
          echo "Missing input file name. Or file not found."
      fi
 
-     z1=`curl $keyvalue_wwwservice/$keyvalue_bucket_id/$keyvalue_urlholder_key`
-     z2=`curl $keyvalue_wwwservice/$keyvalue_bucket_id/$keyvalue_phraseholder_key`
+     #z1=`curl "$keyvalue_wwwservice/$keyvalue_bucket_id/$keyvalue_urlholder_key"`
+     #z2=`curl $keyvalue_wwwservice/$keyvalue_bucket_id/$keyvalue_phraseholder_key`
+     z1=$(curl $keyvalue_wwwservice/$keyvalue_bucket_id/$keyvalue_urlholder_key)
+     z2=$(curl $keyvalue_wwwservice/$keyvalue_bucket_id/$keyvalue_phraseholder_key)
      printf "\nFILEURL - $z1\n"
      printf "\nPHRASE - $z2\n"
 
