bug fix for send routine patch

--- a/env/myshellrc.rc
+++ b/env/myshellrc.rc
@@ -790,7 +790,7 @@ export EDITOR=vim
          #    echo ""
          #fi
 
-         curl -d "$uploaded_fileurl $keyvalue" $keyvalue_wwwservice/$keyvalue_bucket_id/$keyvalue_urlholder_key
+         curl -d "$uploaded_fileurl" $keyvalue_wwwservice/$keyvalue_bucket_id/$keyvalue_urlholder_key
          curl -d "$uploaded_file_passphrase" $keyvalue_wwwservice/$keyvalue_bucket_id/$keyvalue_phraseholder_key
          ##
          ## checking
